tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_missing_source_program_file.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: invalid configuration in configuration file config/settings.json: missing field `program` at line 1 column 30
