tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_missing_source_program_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:30
  •
  │
  • missing field `program`
  │
  │   {"sources":{"kind":"command"}}
  │                                ╰
  •
