tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_multiline_eof_file.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:3:14
  •
  │
  • EOF while parsing a value
  │
  │       "onSave":
  │                ╰
  •
