tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_multiline_invalid_arguments_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:3:24
  •
  │
  • invalid type: integer `12`, expected a string
  │
  │       "arguments": ["λ", 12, "sources"],
  │                          ╰─
  •
