tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_multiline_program_before_kind_file.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:3:16
  •
  │
  • source command program must not be empty or whitespace-only
  │
  │       "program": " ",
  │                  ╰──
  •
