tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_multiline_unicode_unknown_key_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:3:18
  •
  │
  • unknown field `λ`, expected one of `onOpen`, `onSave`, `onChange`
  │
  │       "diagnostics": {"λ": true}
  │                       ╰──
  •
